<resources>
    <string name="str_app_name">DGarcia - Project Firebase</string>
    <string name="str_main_edit_text_label">ENTER NAME TO PLAY</string>
    <string name="str_post_button">POST</string>
    <string name="str_get_button">GET</string>
    <string name="str_delete_button">DELETE</string>
    <string name="str_output_window_label">Ready&#8230;</string>
    <string name="str_recycler_info_header">TEST OBJECT INFO</string>
    <string name="str_recycler_info_id">ID:</string>
    <string name="str_recycler_info_date">DATE:</string>
    <string name="str_name_error">NO NAME ENTERED</string>
    <string name="str_done_button">DONE</string>
    <string name="str_screen_large">Im a LARGE screen.</string>
</resources>
